# AI_voicegram

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  main.json
src-tauri/permissions/: lib.toml
src-tauri/src/: lib.rs
