[package]
name = "finalist-transcribe"
version = "0.1.0"
description = "A Wispr Flow Clone with Smart Dictation"
authors = ["you"]
edition = "2021"

[lib]
name = "finalist_transcribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
# Enigo 0.1.2 is the most stable version for the 'Wispr' typing effect
enigo = { version = "0.1.2", features = ["with_serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2"
